--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ body {
 }
 
 .logo-img {
-    max-width: 300px;
+    max-width: 400px;
+    width: 100%;
     height: auto;
     margin-bottom: 2rem;
 }
