Update background color to #272926

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-color: #3D4039; /* Dark Grey - Background */
+    --bg-color: #272926; /* Dark Grey - Background */
     --primary-text: #FFFFFF; /* White - Primary text colour */
     --muted-olive: #78815C; /* Muted Olive Green - Primary */
     --yellow-agave: #A29037; /* Yellow Agave Leaf - Secondary */
