--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     background-color: var(--bg-color);
+    background-image: url('/assets/desktop.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: var(--primary-text);
     display: flex;
     flex-direction: column;
