--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     background-color: var(--bg-color);
-    background-image: url('/assets/desktop.jpg');
+    background-image: url('assets/desktop.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -40,7 +40,7 @@ body {
 /* Tablet background */
 @media (max-width: 1024px) {
     body {
-        background-image: url('/assets/tablet.jpg');
+        background-image: url('assets/tablet.jpg');
         background-attachment: scroll;
     }
 }
@@ -48,7 +48,7 @@ body {
 /* Mobile background */
 @media (max-width: 768px) {
     body {
-        background-image: url('/assets/mobile.jpg');
+        background-image: url('assets/mobile.jpg');
         background-attachment: scroll;
     }
 }
