--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root {
     --bg-color: #272926; /* Dark Grey - Background */
-    --primary-text: #000000; /* Black - Primary text colour */
+    --primary-text: #FFFFFF; /* White - Primary text colour */
     --muted-olive: #78815C; /* Muted Olive Green - Primary */
     --yellow-agave: #A29037; /* Yellow Agave Leaf - Secondary */
     --terracotta: #B86744; /* Terracotta - Secondary */
-    --text-muted: #000000; /* Black for secondary text */
+    --text-muted: #FFFFFF; /* White for secondary text */
 }
 
 /* Brand font styling */
