Change left box width to fixed 450px

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 .container {
-    width: 50%;
+    width: 450px;
     height: 100vh;
     padding: 2rem;
     background-color: var(--bg-color);
