Fix build: Move components to src root to avoid Vite tsconfig resolution bug

--- a/src/Header.astro
+++ b/src/Header.astro
@@ -1,6 +1,6 @@
 ---
-import logoIcon from '../../assets/brand/logos/mezcalomano_icon_white.svg';
-import burgerIcon from '../../assets/ui/icons/icon_burger.svg';
+import logoIcon from '../assets/brand/logos/mezcalomano_icon_white.svg';
+import burgerIcon from '../assets/ui/icons/icon_burger.svg';
 import MobileNav from './MobileNav.astro';
 
 const currentPath = Astro.url.pathname;
