--- a/src/pages/matrix.astro
+++ b/src/pages/matrix.astro
@@ -2,8 +2,8 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { Image } from 'astro:assets';
 import matrixImage from '../../assets/photos/matrix_01_1600w.webp';
-import MatrixCard from '../components/MatrixCard.astro';
-import MatrixDrawer from '../components/MatrixDrawer.astro';
+import MatrixCard from '../MatrixCard.astro';
+import MatrixDrawer from '../MatrixDrawer.astro';
 import matrixData from '../data/matrix.json';
 
 // Extract unique habitats
