--- a/src/MobileNav.astro
+++ b/src/MobileNav.astro
@@ -1,5 +1,5 @@
 ---
-import closeIcon from '../../assets/ui/icons/icon_close.svg';
+import closeIcon from '../assets/ui/icons/icon_close.svg';
 ---
 
 <div class="mobile-nav-overlay" id="mobile-nav-overlay">
