--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { Image } from 'astro:assets';
 import contactImage from '../../assets/photos/contact_01_1600w.webp';
-import ContactForm from '../components/ContactForm.astro';
+import ContactForm from '../ContactForm.astro';
 ---
 
 <BaseLayout title="Contact | Mezcalómano" description="Get in touch with Mezcalómano">
