--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -24,7 +24,7 @@ import ContactForm from '../ContactForm.astro';
         <p>Have a question? We'd love to hear from you.</p>
       </div>
       
-      <ContactForm client:load />
+      <ContactForm />
     </div>
   </div>
 </BaseLayout>
