--- a/src/MobileNav.astro
+++ b/src/MobileNav.astro
@@ -6,7 +6,7 @@ import closeIcon from '../assets/ui/icons/icon_close.svg';
   <div class="mobile-nav-header">
     <span></span>
     <button class="mobile-nav-close" id="mobile-nav-close" aria-label="Close menu">
-      <img src={closeIcon} alt="" />
+      <img src={closeIcon.src} alt="" />
     </button>
   </div>
   
