--- a/src/Header.astro
+++ b/src/Header.astro
@@ -1,5 +1,6 @@
 ---
-import logoIcon from '../assets/brand/logos/mezcalomano_icon_white.svg';
+import { Image } from 'astro:assets';
+import logoIcon from '../assets/brand/logos/mezcalomano_lockup_stacked_dark.svg';
 import burgerIcon from '../assets/ui/icons/icon_burger.svg';
 import MobileNav from './MobileNav.astro';
 
@@ -9,7 +10,7 @@ const currentPath = Astro.url.pathname;
 <header class="header">
   <div class="header-content">
     <a href="/" class="header-logo" aria-label="Mezcalómano Home">
-      <img src={logoIcon} alt="Mezcalómano" />
+      <img src={logoIcon.src} alt="Mezcalómano" />
     </a>
     
     <nav class="header-nav" aria-label="Main navigation">
@@ -24,7 +25,7 @@ const currentPath = Astro.url.pathname;
     </nav>
 
     <button class="header-burger" id="mobile-nav-toggle" aria-label="Open menu" aria-expanded="false">
-      <img src={burgerIcon} alt="" />
+      <img src={burgerIcon.src} alt="" />
     </button>
   </div>
 </header>
