--- a/src/MobileNav.astro
+++ b/src/MobileNav.astro
@@ -28,7 +28,7 @@ import closeIcon from '../assets/ui/icons/icon_close.svg';
         <a href="/contact" class="mobile-nav-link">Contact</a>
       </li>
       <li class="mobile-nav-item">
-        <a href="/shop" class="mobile-nav-link">Shop</a>
+        <a href="https://shop.mezcalomano.com" class="mobile-nav-link mobile-nav-shop">Shop</a>
       </li>
     </ul>
   </nav>
