--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import homeHero from '../../assets/photos/home_hero_01_1600w.webp';
     <div class="hero-content">
       <h1>Mezcalómano</h1>
       <p>Discover the agave species behind mezcal. Explore 40 species in our interactive matrix.</p>
-      <a href="/buy" class="btn">Get the Discovery Deck</a>
+      <a href="https://shop.mezcalomano.com" class="btn">Get the Discovery Deck</a>
     </div>
   </section>
 </BaseLayout>
