--- a/src/MobileNav.astro
+++ b/src/MobileNav.astro
@@ -13,22 +13,22 @@ import closeIcon from '../assets/ui/icons/icon_close.svg';
   <nav aria-label="Mobile navigation">
     <ul class="mobile-nav-list">
       <li class="mobile-nav-item">
-        <a href="/" class="mobile-nav-link">Home</a>
+        <a href="/" class="mobile-nav-link">HOME</a>
       </li>
       <li class="mobile-nav-item">
-        <a href="/about" class="mobile-nav-link">About</a>
+        <a href="/about" class="mobile-nav-link">ABOUT</a>
       </li>
       <li class="mobile-nav-item">
-        <a href="/matrix" class="mobile-nav-link">Matrix</a>
+        <a href="/matrix" class="mobile-nav-link">MATRIX</a>
       </li>
       <li class="mobile-nav-item">
-        <a href="/map" class="mobile-nav-link">Map</a>
+        <a href="/map" class="mobile-nav-link">MAP</a>
       </li>
       <li class="mobile-nav-item">
-        <a href="/contact" class="mobile-nav-link">Contact</a>
+        <a href="/contact" class="mobile-nav-link">CONTACT</a>
       </li>
       <li class="mobile-nav-item">
-        <a href="https://shop.mezcalomano.com" class="mobile-nav-link mobile-nav-shop">Shop</a>
+        <a href="https://shop.mezcalomano.com" class="mobile-nav-link mobile-nav-shop">SHOP</a>
       </li>
     </ul>
   </nav>
